--- a/examplesDOM/index.html
+++ b/examplesDOM/index.html
@@ -43,5 +43,6 @@
 
         <script src="script.js"></script>
         <script src="script2.js"></script>
+        <script src="events.js"></script>
     </body>
 </html>
