events traverse through elements (parent - child)

--- a/examplesDOM/index.html
+++ b/examplesDOM/index.html
@@ -15,7 +15,7 @@
 
             <br><br>
 
-            <p class="error-not-green">This is paragraph one</p>
+            <p class="error-not-green">This is paragraph one </p>
             <p>The second paragraph</p>
             <p class="error-not-green" >Another paragraph</p>
             <p>Helloooooooooooo</p>
@@ -41,8 +41,17 @@
             <button id="myMakeMeChecklist">Make this input text a checklist</button>
         </div>
 
+        <div class='lista'>
+            <ul>
+                <li>PRIMEIO DA LISTA <button>Remove</button></li>
+                <li>SEGUNDO DA LISTA <button>Remove</button></li>
+                <li>TERCEIRO DA LISTA <button>Remove</button></li>
+            </ul>
+        </div>
+
         <script src="script.js"></script>
         <script src="script2.js"></script>
         <script src="events.js"></script>
+        <script src="traverse.js"></script>
     </body>
 </html>
