list siblings relations

--- a/examplesDOM/index.html
+++ b/examplesDOM/index.html
@@ -42,12 +42,16 @@
         </div>
 
         <div class='lista'>
-            <ul>
-                <li>PRIMEIO DA LISTA <button>Remove</button></li>
-                <li>SEGUNDO DA LISTA <button>Remove</button></li>
-                <li>TERCEIRO DA LISTA <button>Remove</button></li>
+            <ul id="ulId">
+                <li>PRIMEIO DA LISTA</li>
+                <li>SEGUNDO DA LISTA</li>
+                <li>TERCEIRO DA LISTA</li>
             </ul>
         </div>
+            <br>
+
+            <input type="text" id="addListItem">
+            <button id="btnAddListItem">Adicione items na lista</button>
 
         <script src="script.js"></script>
         <script src="script2.js"></script>
